move Latency, add mechanism to mark it stale, stablize tests
Signed-off-by: Xin Li <xin@hashgraph.com>